force-app/main/default/objects/LangSys__mdt/LangSys__mdt.object-meta.xml
<CustomObject>
    <label>LangSys</label>
    <pluralLabel>LangSys</pluralLabel>
</CustomObject>