force-app/main/default/objects/LangSys__mdt/fields/LngCode__c.field-meta.xml
<CustomField>
    <fullName>LngCode__c</fullName>
    <label>LngCode</label>
    <length>18</length>
    <type>Text</type>
</CustomField>