force-app/main/default/objects/LangSys__mdt/fields/LngFullName__c.field-meta.xml
<CustomField>
    <fullName>LngFullName__c</fullName>
    <label>LngFullName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>