force-app/main/default/objects/LangSys__mdt/fields/LngName__c.field-meta.xml
<CustomField>
    <fullName>LngName__c</fullName>
    <label>LngName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>