force-app/main/default/objects/LangSys__mdt/listViews/NewView.listView-meta.xml
<ListView>
    <fullName>NewView</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>LngCode__c</columns>
    <columns>LngFullName__c</columns>
    <columns>LngName__c</columns>
    <columns>IsDefault__c</columns>
    <filterScope>Everything</filterScope>
    <label>NewView</label>
    <language>en_US</language>
</ListView>